# GtestSample

./: .gitmodules  README.md
include/: Accumulator.h  Multiplier.h
source/: Accumulator.cpp  Multiplier.cpp  main.cpp
test/: CMakeLists.txt
test/src/: Accumulator_test.cpp  Multiplier_test.cpp
